--- a/navbar/navbar.component.html
+++ b/navbar/navbar.component.html
@@ -1,3 +1,36 @@
-<p>
-  navbar works!
-</p>
+<ion-header>
+  <ion-toolbar color="tertiary">
+    <ion-buttons slot="start">
+      <ion-button>ACK St James Koromosho</ion-button>
+    </ion-buttons>
+
+    <ion-buttons slot="end">
+      <ion-button routerLink="/" >Home</ion-button>
+      <ion-button routerLink="/about" >About</ion-button>
+      <ion-button routerLink="/ministries" >Ministries</ion-button>
+      <ion-button routerLink="/sermons" >Sermons</ion-button>
+      <ion-button routerLink="/contact" >Contact</ion-button>
+    </ion-buttons>
+
+  </ion-toolbar>
+</ion-header>
+
+
+
+<!-- <ion-header>
+  <ion-toolbar color="tertiary">
+    <ion-buttons slot="start">
+      <ion-button>ACK St James Koromosho</ion-button>
+    </ion-buttons>
+
+    <ion-buttons slot="end">
+      <ion-button routerLink="/" >Home</ion-button>
+      <ion-button routerLink="/about" >About</ion-button>
+      <ion-button routerLink="/ministries" >Ministries</ion-button>
+      <ion-button routerLink="/sermons" >Sermons</ion-button>
+      <ion-button routerLink="/contact" >Contact</ion-button>
+      
+    </ion-buttons>
+
+  </ion-toolbar>
+</ion-header> -->
