style each  component differently

--- a/hero/hero.component.html
+++ b/hero/hero.component.html
@@ -1,3 +1,9 @@
-<p>
-  hero works!
-</p>
+  <section class="hero">
+    <div class="hero-content">
+      <h1> Welcome to ACK St James Koromosho </h1>
+      <p>A Christ‑centered community of faith, worship, and service.</p>
+      <ion-button
+      color="primary" shape="round" routerLink="main/about"
+      >Learn More</ion-button>
+    </div>
+  </section>
