--- a/ministries-grid/ministries-grid.component.html
+++ b/ministries-grid/ministries-grid.component.html
@@ -1,3 +1,16 @@
-<p>
-  ministries-grid works!
-</p>
+  <section class="ministries-preview">
+    <h2>Our Ministries</h2>
+    <div class="grid"  >
+      <div class="card" routerLink="/main/ministries">
+        <h3>Youth Ministry</h3>
+      </div>
+
+      <div class="card" routerLink="/main/ministries">
+        <h3>Women’s Guild</h3>
+      </div>
+
+      <div class="card" routerLink="/main/ministries">
+        <h3>Men’s Fellowship</h3>
+      </div>
+    </div>
+  </section>
