--- a/sermon-highlight/sermon-highlight.component.html
+++ b/sermon-highlight/sermon-highlight.component.html
@@ -1,3 +1,6 @@
-<p>
-  sermon-highlight works!
-</p>
+  <section class="sermon-highlight">
+    <h2>Latest Sermon</h2>
+    <p>“Walking in Faith” – Rev. John Doe</p>
+    <ion-button routerLink="/main/sermons" color="secondary" shape="round"
+    >Watch Sermons</ion-button>
+  </section>
