--- a/service-times/service-times.component.html
+++ b/service-times/service-times.component.html
@@ -1,3 +1,5 @@
-<p>
-  service-times works!
-</p>
+  <section class="service-times">
+    <h2>Service Times</h2>
+    <p>Sunday Worship - 9:00AM</p>
+    <p>Midweek Fellowship – Wednesday 5:00 PM</p>
+  </section>
