--- a/navbar/navbar.component.html
+++ b/navbar/navbar.component.html
@@ -6,7 +6,7 @@
 
     <ion-buttons slot="end">
       <ion-button routerLink="/" >Home</ion-button>
-      <ion-button routerLink="/about" >About</ion-button>
+      <ion-button routerLink="/main/about" >About</ion-button>
       <ion-button routerLink="/ministries" >Ministries</ion-button>
       <ion-button routerLink="/sermons" >Sermons</ion-button>
       <ion-button routerLink="/contact" >Contact</ion-button>
