add an active link on navbar

--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -57,7 +57,7 @@
         <ion-icon name="time-outline"></ion-icon>
         <div class="info-text">
           <span class="info-label">Sunday Services</span>
-          <span class="info-value">8:00 AM & 10:30 AM</span>
+          <span class="info-value">8:30 AM & 10:00 AM</span>
         </div>
       </div>
       <div class="info-divider"></div>
@@ -65,7 +65,7 @@
         <ion-icon name="location-outline"></ion-icon>
         <div class="info-text">
           <span class="info-label">Location</span>
-          <span class="info-value">Nakuru, Kenya</span>
+          <span class="info-value">Eldoret, Kenya</span>
         </div>
       </div>
     </div>
