--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,11 +5,11 @@
     </ion-buttons>
 
     <ion-buttons slot="end">
-      <ion-button routerLink="/main/home">Home</ion-button>
-      <ion-button routerLink="/main/about">About</ion-button>
-      <ion-button routerLink="/main/ministries">Ministries</ion-button>
-      <ion-button routerLink="/main/sermons">Sermons</ion-button>
-      <ion-button routerLink="/main/contact">Contact</ion-button>
+      <ion-button routerLink="/main/home" routerLinkActive="active-link" >Home</ion-button>
+      <ion-button routerLink="/main/about" routerLinkActive="active-link">About</ion-button>
+      <ion-button routerLink="/main/ministries" routerLinkActive="active-link">Ministries</ion-button>
+      <ion-button routerLink="/main/sermons" routerLinkActive="active-link">Sermons</ion-button>
+      <ion-button routerLink="/main/contact" routerLinkActive="active-link">Contact</ion-button>
     </ion-buttons>
 
   </ion-toolbar>
@@ -17,20 +17,3 @@
 
 
 
-<!-- <ion-header>
-  <ion-toolbar color="tertiary">
-    <ion-buttons slot="start">
-      <ion-button>ACK St James Koromosho</ion-button>
-    </ion-buttons>
-
-    <ion-buttons slot="end">
-      <ion-button routerLink="/" >Home</ion-button>
-      <ion-button routerLink="/about" >About</ion-button>
-      <ion-button routerLink="/ministries" >Ministries</ion-button>
-      <ion-button routerLink="/sermons" >Sermons</ion-button>
-      <ion-button routerLink="/contact" >Contact</ion-button>
-      
-    </ion-buttons>
-
-  </ion-toolbar>
-</ion-header> -->
