--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,11 +2,11 @@
 
   <app-hero></app-hero>
 
-  <app-service-times></app-service-times>
+  <!-- <app-service-times></app-service-times> -->
 
-  <app-ministries-grid></app-ministries-grid>
+  <!-- <app-ministries-grid></app-ministries-grid>
 
-  <app-sermon-highlight></app-sermon-highlight>
+  <app-sermon-highlight></app-sermon-highlight> -->
 
 </ion-content>
 
